# nanjia

./: .env.development.example  .env.production.example  .env.test.example  .gitignore  README.md  babel.config.js  cloudbaserc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.config.dev.json  project.config.json  project.config.prod.json  project.config.test.json  project.private.config.json  tsconfig.json
admin/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
admin/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
admin/src-tauri/.cargo/: config.toml
admin/src-tauri/.tauri/: nanjia-beauty.key.pub
admin/src-tauri/binaries/: .gitignore
admin/src-tauri/capabilities/: default.json
admin/src-tauri/icons/: icon.icns
admin/src-tauri/src/: config.rs  image_util.rs  lib.rs  logging.rs  updater.rs  video_compress_config.rs  video_util.rs
admin/src-tauri/src/cloud/: api_error.rs  billing.rs  client.rs  content.rs  database.rs  db_util.rs  env_files.rs  mod.rs  provision.rs  storage.rs  tc3.rs
admin/src-tauri/src/commands/: content.rs  database.rs  env_billing.rs  env_profile.rs  geolocation.rs  media_audit.rs  migrate_env.rs  mod.rs  upload.rs
admin/src-tauri/src/image_compress/: codec.rs  config.rs  hardware.rs  mod.rs  pipeline.rs  progress.rs  types.rs
admin/src-tauri/src/local/: env_profile.rs  mod.rs  paths.rs
admin/src-tauri/src/sync/: media_audit.rs  mod.rs  refs.rs  types.rs
cloud/: README.md  bundle-cf-shared.js
config/: dev.ts  index.ts  mini-webpack.ts  test.ts  (+1 more)
(+276 files in other folders)
